<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2E2E"
    tools:context=".Principal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="402dp"
        android:layout_height="273dp"
        android:contentDescription="@string/LOGGO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Ruleta"
        android:layout_width="327dp"
        android:layout_height="65dp"
        android:background="@drawable/boton"
        android:fontFamily="casual"
        android:onClick="btnNuevaPartida"
        android:text="@string/nueva_partida"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

    <Button
        android:id="@+id/ruleta3"
        android:layout_width="327dp"
        android:layout_height="65dp"
        android:background="@drawable/boton"
        android:fontFamily="casual"
        android:onClick="btnAjustes"
        android:text="@string/ajustes"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

    <Button
        android:id="@+id/ruleta2"
        android:layout_width="327dp"
        android:layout_height="65dp"
        android:background="@drawable/boton"
        android:fontFamily="casual"
        android:text="@string/estad_sticas"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <Button
        android:id="@+id/ruleta"
        android:layout_width="327dp"
        android:layout_height="65dp"
        android:background="@drawable/boton"
        android:fontFamily="casual"
        android:text="@string/partidas_activas"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

</androidx.constraintlayout.widget.ConstraintLayout>